[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest_repeated"
dynamic = ["version"]
description = "A pytest module for very basic statistical tests. Repeat test multiple times and pass if the underlying test passes a threshold."
readme = "README.md"
authors = [
    { name = "Sinan Ozel", email = "coding@sinan.slmail.me" },
]
license = { file = "LICENSE" }
dependencies = [
    "pytest>=7.0.0",
    "mpmath>=1.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",          # For running tests
    "pytest-cov>=3.0.0",      # For test coverage reporting
    "pytest-depends>=1.0.1",  # For test dependency management
    "pytest-mock>=3.14.0",    # For mocking in tests
    "httpx>=0.28.1",          # To make more complex calls, such as streaming.
]

dev = [
    "isort>=5.12.0",          # For import sorting
    "ruff>=0.12.11",          # For linting
    "black>=24.0.0",          # For code formatting (Black)
    "docformatter>=1.7.5",    # For formatting docstrings
]

docs = [
    "mkdocs-material>=9.0.0", # Material theme for MkDocs
    "mkdocstrings[python]>=0.24.0",  # API documentation from docstrings
]

publish = [
    "packaging>=25.0",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
# Allow Unicode identifiers (e.g., Greek letters for statistical formulas)
allowed-confusables = ["α", "β", "γ", "δ", "ε", "ζ", "η", "θ", "ι", "κ", "λ", "μ", "ν", "ξ", "ο", "π", "ρ", "σ", "τ", "υ", "φ", "χ", "ψ", "ω", "Δ", "Σ", "Φ", "Ψ", "Ω"]

[tool.ruff.lint.per-file-ignores]
# Disable RUF001 (ambiguous unicode character) for files with mathematical formulas
"**/plugin.py" = ["RUF001"]
"**/test_*.py" = ["RUF001"]

[tool.black]
line-length = 80
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 80

[tool.setuptools.dynamic]
version = { attr = "pytest_repeated.__version__" }

[project.entry-points.pytest11]
repeated = "pytest_repeated.plugin"

[project.urls]
Homepage = "https://github.com/sinan-ozel/pytest-repeated"
Issues = "https://github.com/sinan-ozel/pytest-repeated/issues"
